fix branches not showing

--- a/styles/orbital-command.less
+++ b/styles/orbital-command.less
@@ -103,16 +103,8 @@
           height: 30px;
           padding: 0 10px;
           line-height: 30px;
-          border-bottom: 1px solid @border-color;
+          border-top: 1px solid @border-color;
           box-shadow: inset 0 1px 0 @shadow-color;
-
-          &:first-child {
-            border-top: 1px solid @border-color;
-          }
-
-          &:last-child {
-            border-bottom: none;
-          }
 
           & > span {
             display: inline-block;
